# accelsim-lite

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak.20260308_200601  Jenkinsfile  Makefile  README.md
.github/: pull_request_template.md
analysis/: collective_bandwidth_sweep.json  communication_bottleneck_report.md
benchmarks/: performance_profile.md
build_analytics/: build_health_report.md  build_history.json  flaky_test_detector.py  regression_trends.json
cache_behavior/: cache_hierarchy_report.md  cache_hierarchy_results.json  run_cache_hierarchy_study.py
cad_flow/: Dockerfile  Makefile  README.md
ci/: build_matrix_report.md  quality_gate.sh  quality_gate_report.md  run_build_matrix.sh
ci_matrix/: asan_report.md  ubsan_report.md  warnings_as_errors.md
cmake/: BuildProfiles.cmake
docs/: case_study.md  claims_boundary.md  cli_workflow.md  coding_standards.md  cpp_systems_architecture.md  cpu_cache_locality_note.md  defect_cases.md  interview_walkthrough.md  limitations.md  runtime_execution_engine_overview.md
engineering_performance_center/: generate_performance_center.py  performance_center_report.md  performance_center_summary.json
execution_engine_lab/: bytecode_optimization_report.md  bytecode_optimizer.cpp  bytecode_workloads.json  dispatch_lookup_structure_benchmark.cpp  equivalence_trace_cases.json  hot_trace_profiles.json  inline_cache_transition_report.md  interpreter_dispatch_report.md  lookup_structure_benchmark_report.md  lookup_structure_benchmark_summary.json  object_shape_cache_sim.cpp  opcode_frequency_report.json  optimized_trace_comparison.json  property_access_profiles.json  run_runtime_regression_gate.py  run_wasm_validation_regression.py  runtime_equivalence_harness.cpp  runtime_equivalence_report.md  runtime_equivalence_summary.json  runtime_experiment_summary.md  runtime_regression_baseline.json  runtime_regression_report.md  runtime_regression_summary.json  semantic_equivalence_harness.cpp  semantic_equivalence_report.json  semantic_equivalence_report.md  speculative_guard_cases.json  stack_bytecode_interpreter.cpp  tiered_execution_sim.cpp  tiering_and_deopt_report.md  wasm_control_flow_cases.json  wasm_malformed_trace_regression_cases.json  wasm_regression_report.md  wasm_regression_summary.json  wasm_style_stack_validator.cpp  wasm_validation_report.md
firmware_style_validation/: README.md  bit_exactness_report.md  fixed_point_filter.cpp  fixed_point_filter.h  hardware_interface_mock.h  memory_budget_report.md  reference_outputs.json  ring_buffer.c  ring_buffer.h  timing_budget_report.md
ml_systems_studies/: llm_inference_bottleneck_report.md  llm_inference_bottleneck_results.json  llm_inference_workload_profiles.json  research_note_prefill_decode_pressure.md  run_prefill_decode_bottleneck_sweep.py
numa_behavior/: numa_latency_report.md  numa_latency_results.json  run_numa_latency_study.py
optimization_explorer/: optimization_comparison.json  optimization_explorer_report.md  run_optimization_explorer.py
os_concepts/: memory_pressure_output.csv  memory_pressure_sim.cpp  run_os_concepts_demo.sh  scheduler_latency_report.md  threading_race_output.txt  threading_race_sim.cpp
parallel_execution/: threaded_worker_sweep.json  threaded_workload_report.md  threaded_workload_runner.cpp
perf_regression_gate/: baseline.json  candidate.json  compare_perf.py  perf_report.md  perf_summary.json
performance_regression/: baseline_metrics.json  bottleneck_analysis.md  candidate_metrics.json  regression_summary.md
performance_systems/: cache_locality_experiment.py  cache_locality_report.md  cache_locality_results.json  (+6 more)
tests/: CMakeLists.txt  test_benchmark_thresholds.cpp  test_bit_exactness.cpp  test_boundary_workloads.cpp  test_compare_mode.cpp  test_determinism.cpp  test_fixed_point_filter.cpp  test_instruction_lifecycle.cpp  test_invalid_pipeline_config.cpp  test_invalid_workload_config.cpp  test_large_queue_pressure.cpp  test_memory_budget.cpp  test_memory_port_scaling.cpp  test_memory_pressure.cpp  test_os_concepts.cpp  test_pipeline_state.cpp  test_queue.cpp  test_queue_pressure.cpp  test_ring_buffer_bounds.cpp  test_runtime_state_transitions.cpp  test_scheduler_regression.cpp  test_timing_budget.cpp  test_workload_parser.cpp  test_zero_resource_config.cpp
(+178 files in other folders)
